K3d/tqTraefik/k3demo0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k3demo0
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k3demo0
  template:
    metadata:
      labels:
        app: k3demo0
    spec:
      containers:
      - name: k3demo0
        image: dockersamples/static-site:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: k3demo0
  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: k3demo0
