K3d/tqTraefik/k3dtraefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k3demo0
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k3demo0
            port:
              number: 80
  - host: tarso.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k3demo1
            port:
              number: 80
